infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: library.dev
      http:
        paths:
          - path: /api/v1/?(.*)
            backend:
              serviceName: book-library-server-srv
              servicePort: 9000
          - path: /?(.*)
            backend:
              serviceName: book-library-client-srv
              servicePort: 3000
